- Overflow is now working on the simple example in the main test page, for text and container elements!  - Found a bug with borders (don't seem to update when dimensions change) but first attempt at fixing was a disaster (borders would just disappear): TODO!

--- a/framework_comparisons/base/css.css
+++ b/framework_comparisons/base/css.css
@@ -25,6 +25,18 @@
 	}
 }
 
+@keyframes animWidth {
+	0% {
+		width: 200px;
+	}
+	50% {
+		width: 300px;
+	}
+	100% {
+		width: 400px;
+	}
+}
+
 body {
 	background-color: white;
 }
